# Async_API_sprint_1_29

./: .gitignore  README.md  docker-compose.yml  docker-compose_prod.yml  nginx.conf  pyproject.toml
conf.d/: site.conf
etl/: Dockerfile  README.md  dev.env  elasticsearch.yml  extractors.py  loaders.py  log.py  main.py  models.py  pyproject.toml  service.py  settings.py  state.json  state_rw.py  state_rw_test.py  transformers.py
fastapi/: Dockerfile
fastapi/src/: Dockerfile  main.py
fastapi/src/api/v1/: films.py
fastapi/src/core/: config.py
fastapi/src/models/: film.py  person.py
fastapi/src/services/: common.py  film.py  filmdependencies.py
pgsql/: Dockerfile  entry_script.sh  movies_database.sql
src/: Dockerfile  dev.env  main.py  pyproject.toml
src/api/v1/: films.py  genres.py  persons.py
src/core/: config.py
src/models/: film.py  genre.py  mixins.py  person.py
src/services/: common.py  film.py  filmdependencies.py  genre.py  person.py
tasks/: 01_create_basis.md
