[tool.poetry]
name = "async-api-sprint-1-29"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "async_api_sprint_1_29"}]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.5.1"
elasticsearch = {extras = ["async"], version = "^8.6.2"}
fastapi = "^0.94.0"
orjson = "^3.8.7"
pydantic = "^1.10.6"
uvicorn = "^0.21.0"
uvloop = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
